[gd_scene load_steps=10 format=3 uid="uid://c8iaxnwk748px"]

[ext_resource type="Script" path="res://scripts/ui/cards/card.gd" id="1_lr2ox"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_csujt"]
bg_color = Color(0.262745, 0.603922, 0.360784, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="LabelSettings" id="LabelSettings_svkr1"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_622gg"]
font_size = 23
shadow_size = 6
shadow_color = Color(0, 0, 0, 0.568627)

[sub_resource type="LabelSettings" id="LabelSettings_pqnfi"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_h0433"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_a0trx"]
resource_name = "focus"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(0.707107, 1.8025, 2.21914),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.35, 1.35), Vector2(1.3, 1.3)]
}

[sub_resource type="Animation" id="Animation_k8rag"]
resource_name = "focus_exit"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.707107, 2.21914),
"update": 0,
"values": [Vector2(1.3, 1.3), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4bycb"]
_data = {
"RESET": SubResource("Animation_h0433"),
"focus": SubResource("Animation_a0trx"),
"focus_exit": SubResource("Animation_k8rag")
}

[node name="Card" type="Panel"]
custom_minimum_size = Vector2(150, 250)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -648.0
offset_right = -426.0
offset_bottom = -398.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(75, 250)
theme_override_styles/panel = SubResource("StyleBoxFlat_csujt")
script = ExtResource("1_lr2ox")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Name"
label_settings = SubResource("LabelSettings_svkr1")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3
stretch_mode = 5

[node name="Stats" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "1 ATK
1 HP"
label_settings = SubResource("LabelSettings_622gg")
horizontal_alignment = 1

[node name="Type" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Type"
label_settings = SubResource("LabelSettings_pqnfi")
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4bycb")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="renamed" from="." to="." method="_on_renamed"]
